--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,17 @@
-<h1>show cocktail</h1>
-<h2><%= @cocktail.name %></h2>
-<%= link_to "back to list", cocktails_path %>
-<%= link_to "add ingredient", new_cocktail_dose_path(:cocktail_id) %>
 
-
+<div class="container">
+<div class="text-center"></div>
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="https://www.destinationcocktails.fr/wp-content/uploads/2019/11/le_secret_des_cocktails_a_etages-2.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"><%= @cocktail.name %></h5>
+      <p class="card-text">   <ul>
+      <% @cocktail.doses.each do |d|  %>
+        <li><%= d.ingredient.name %> : <%= d.description %> | <%= link_to "Delete", dose_path(d), method: :delete, data: { confirm: "Are you sure?" }  %></li>
+      <% end %>
+      </ul></p>
+          <a href="<%=cocktails_path %>" class="btn btn-primary">back to list</a>
+          <a href="<%= new_cocktail_dose_path(@cocktail) %>" class="btn btn-success">add ingredient</a>
+    </div>
+  </div>
+</div>
