--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,8 +1,8 @@
-<h1>new dose</h1>
-
-
-<%= simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.input :ingredient_id, collection: @ingredients %>
-  <%= f.input :description %>
-  <%= f.submit "add dose", class: "btn btn-primary" %>
-<% end %>
+<div class="container">
+  <h1>new dose</h1>
+  <%= simple_form_for [@cocktail, @dose] do |f| %>  
+    <%= f.association :ingredient %>
+    <%= f.input :description %>
+    <%= f.submit "add dose", class: "btn btn-primary" %>
+  <% end %>
+</div>
